<resources>
    <string name="app_name">Pokemon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_sprite">pokemon image</string>
    <string name="pokemon_name">pokemon name</string>
    <string name="select_indicator">select indicator</string>
    <string name="remove">remove</string>
    <string name="pokemon_images">pokemon images</string>
    <string name="swipe_to_left">swipe to left</string>
    <string name="swipe_to_right">swipe to right</string>
    <string name="weight">weight: %1$s</string>
    <string name="height">height: %1$s</string>
    <string name="pokemonability">Pokemon Ability</string>
    <string name="plain_text">%1$s</string>
    <string name="test">test</string>
    <string name="search">Search</string>
</resources>